@@ -2,6 +2,9 @@
 
 Changes with APR-util 1.2.13
 
+  *) Fix a regression in apr_brigade_partition that causes integer overflows
+     on systems where apr_off_t > apr_size_t.  [Ruediger Pluem]
+
   *) Ensure that apr_uri_unparse does not add scheme to URI if
      APR_URI_UNP_OMITSITEPART flag is set. PR 44044.
      [Michael Clark <michael metaparadigm.com>]
